stampato a schermo anche le singole risposte con doppio ciclo foreach

--- a/style.css
+++ b/style.css
@@ -48,3 +48,28 @@ header .nav ul .active {
     border-bottom: 3px solid #3367d6;
     padding-bottom: 6px;
 }
+
+/* main */
+
+main>div {
+    max-width: 978px;
+    margin: 20px auto;
+    /* background-color: #5f6368; */
+    height: 300px;
+}
+h2 {
+    color: #303335;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+    margin: 0;
+    padding: 64px 0 0 0;
+    display: block;
+    font-family: 'Open Sans', sans-serif;
+}
+p {
+    line-height: 24px;
+    padding-top: 20px;
+    margin-top: 10px;
+    font-size: 14px;
+}
