--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+.body {
+    position: relative;
+}
 .flex {
     display: flex;
 }
@@ -20,6 +23,13 @@
     color: #5f6368;
 }
 /* header */
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
+    width: 100%;
+}
 header .top {
     padding: 1.2rem;
 }
@@ -53,7 +63,7 @@ header .nav ul .active {
 
 main>div {
     max-width: 978px;
-    margin: 20px auto;
+    margin: 120px auto;
     /* background-color: #5f6368; */
     height: 300px;
 }
